--- a/AUModpackTools/AUModpackTools.csproj
+++ b/AUModpackTools/AUModpackTools.csproj
@@ -26,6 +26,11 @@
         <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.0.1" PrivateAssets="all" ExcludeAssets="runtime" />
     </ItemGroup>
 
+	<ItemGroup>
+		<EmbeddedResource Include="Assets\**\*" />
+		<Reference Include="lib\**\*" />
+	</ItemGroup>
+
     <Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
         <Copy SourceFiles="$(TargetPath)" DestinationFolder="$(AmongUs)/BepInEx/plugins/" UseSymboliclinksIfPossible="true" />
 		<!--<Exec Command="&quot;$(AmongUs)/Among Us.exe&quot;" />--> <!--Uncomment to Launch Among Us On Build-->
