--- a/AUModpackTools/AUModpackTools.csproj
+++ b/AUModpackTools/AUModpackTools.csproj
@@ -2,33 +2,31 @@
     <PropertyGroup>
 		<Title>AUModpackTools</Title>
         <Description>Toolkit for Among Us Modpacks</Description>
-		<Version>1.1.0</Version>
+		<Version>1.2.0</Version>
 		<Authors>DigiWorm</Authors>
 		
         <TargetFramework>net6.0</TargetFramework>
         <LangVersion>latest</LangVersion>
         <DebugType>embedded</DebugType>
 		<Nullable>enable</Nullable>
-
     </PropertyGroup>
 	
 	<PropertyGroup>
 		<AmongUs>C:\Program Files (x86)\Steam\steamapps\common\Among Us</AmongUs>
-		<GameVersion>2023.3.28</GameVersion>
+		<GameVersion>2023.6.13</GameVersion>
 	</PropertyGroup>
 
     <ItemGroup>
         <PackageReference Include="Reactor" Version="2.0.0" />
-        <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.662" Private="false" ExcludeAssets="runtime;native" />
-        <PackageReference Include="AmongUs.GameLibs.Steam" Version="2022.10.25" PrivateAssets="all" />
+        <PackageReference Include="BepInEx.Unity.IL2CPP" Version="6.0.0-be.670" PrivateAssets="all"  />
+        <PackageReference Include="AmongUs.GameLibs.Steam" Version="$(GameVersion)" PrivateAssets="all" />
 
         <PackageReference Include="BepInEx.AutoPlugin" Version="1.1.0" PrivateAssets="all" />
-        <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.0.1" PrivateAssets="all" ExcludeAssets="runtime" />
+        <PackageReference Include="BepInEx.IL2CPP.MSBuild" Version="2.1.0-rc.1" PrivateAssets="all" />
     </ItemGroup>
 
 	<ItemGroup>
 		<EmbeddedResource Include="Assets\**\*" />
-		<Reference Include="lib\**\*" />
 	</ItemGroup>
 
     <Target Name="Copy" AfterTargets="Build" Condition="'$(AmongUs)' != ''">
